Configure neovim plugins + fix tmux config
- Move some tmux config to nix because keybind doesnt register
- Configure tmux terminal so the vim colorscheme works

--- a/home-manager/modules/configs/tmux.conf
+++ b/home-manager/modules/configs/tmux.conf
@@ -1,3 +1,7 @@
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+
 set -g status-left-length 30
 set-option -g detach-on-destroy off
 
@@ -9,11 +13,6 @@ bind-key -T prefix v split-window -h
 bind-key -T prefix h split-window
 
 # Plugins
-# tmux-fzf
-TMUX_FZF_LAUNCH_KEY="C-f"
-
 # extrakto
 set -g @extrakto_popup_size "80%,50%"
 
-# fzf-session-switch
-set -g @fzf-goto-session 'S'
