Change rofi theme and fix tmux escape time

--- a/home-manager/modules/configs/tmux.conf
+++ b/home-manager/modules/configs/tmux.conf
@@ -1,6 +1,9 @@
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
+# tmux make vim `Esc` slow, this fix it
+set -sg escape-time 50
+
 
 set -g status-left-length 30
 set-option -g detach-on-destroy off
