Disable pyenv, add tmux config to suite iterm

--- a/home-manager/modules/tmux/tmux.conf
+++ b/home-manager/modules/tmux/tmux.conf
@@ -6,6 +6,8 @@ set -sg escape-time 50
 
 set -g status-left-length 30
 set-option -g detach-on-destroy off
+set -g window-style 'fg=black,bg=colour253'
+set -g window-active-style 'fg=colour234,bg=colour231'
 
 # vim bindings
 bind-key -r -T prefix C-k resize-pane -U
@@ -14,7 +16,7 @@ bind-key -r -T prefix C-l resize-pane -R
 bind-key -T prefix v split-window -h
 bind-key -T prefix h split-window
 
+
 # Plugins
 # extrakto
 set -g @extrakto_popup_size "80%,50%"
-
