--- a/home-manager/modules/tmux/tmux.conf
+++ b/home-manager/modules/tmux/tmux.conf
@@ -9,6 +9,7 @@ set-option -g detach-on-destroy off
 
 # vim bindings
 bind-key -r -T prefix C-k resize-pane -U
+bind-key -r -T prefix C-j resize-pane -D
 bind-key -r -T prefix C-h resize-pane -L
 bind-key -r -T prefix C-l resize-pane -R
 bind-key -T prefix v split-window -h
