fix: hyrpland keybind + tmux clipboard

--- a/home-manager/modules/tmux/tmux.conf
+++ b/home-manager/modules/tmux/tmux.conf
@@ -18,4 +18,5 @@ bind-key -T prefix h split-window
 # Plugins
 # extrakto
 set -g @extrakto_popup_size "80%,50%"
+set -g @extrakto_clip_tool "wl-copy"
 
