rebind tmux to mimic vim pane movement

--- a/home-manager/modules/tmux/tmux.conf
+++ b/home-manager/modules/tmux/tmux.conf
@@ -1,3 +1,4 @@
+# TODO: Move configuration to nix 
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # tmux make vim `Esc` slow, this fix it
@@ -26,5 +27,5 @@ bind-key -T prefix S-s choose-tree -Zs
 # Plugins
 # extrakto
 set -g @extrakto_popup_size "80%,50%"
-set -g @extrakto_clip_tool "wl-copy"
+set -g @extrakto_clip_tool "pbpaste"
 
