--- a/home-manager/modules/tmux/tmux.conf
+++ b/home-manager/modules/tmux/tmux.conf
@@ -12,8 +12,16 @@ bind-key -r -T prefix C-k resize-pane -U
 bind-key -r -T prefix C-j resize-pane -D
 bind-key -r -T prefix C-h resize-pane -L
 bind-key -r -T prefix C-l resize-pane -R
+
+bind-key -T prefix k select-pane -U
+bind-key -T prefix j select-pane -D
+bind-key -T prefix h select-pane -L
+bind-key -T prefix l select-pane -R
+
 bind-key -T prefix v split-window -h
-bind-key -T prefix h split-window
+bind-key -T prefix s split-window
+
+bind-key -T prefix S-s choose-tree -Zs
 
 # Plugins
 # extrakto
