fix: proxy utils + configure tmux popup

--- a/home-manager/modules/tmux/tmux.conf
+++ b/home-manager/modules/tmux/tmux.conf
@@ -24,15 +24,14 @@ bind-key -T prefix s split-window
 
 bind-key -T prefix S-s choose-tree -Zs
 
-bind-key -T prefix Enter if-shell -F '#{==:#{session_name},__popup}' {
-  detach-client
-} {
-  display-popup -d "#{pane_current_path}" -b double -S fg=magenta -xC -yC -w 80% -h 80% -E 'tmux new-session -A -s __popup'
-}
-
-
 # Plugins
 # extrakto
 set -g @extrakto_popup_size "80%,50%"
 
-set -g @extrakto_clip_tool "pbpaste"
+# set -g @extrakto_clip_tool "pbpaste"
+bind-key -T prefix C-\\ if-shell -F '#{==:#{session_name},__popup__}' {
+    detach-client
+} {
+    display-popup -d "#{pane_current_path}" -b double -S fg=magenta -xC -yC -w 80% -h 80% -E 'tmux new-session -A -s "__popup__" -n "popup-#{b:pane_current_path}"'
+}
+
